--- a/crates/visored/visored-pipeline/expect-files/visored-pipeline-works/batch1.tex
+++ b/crates/visored/visored-pipeline/expect-files/visored-pipeline-works/batch1.tex
@@ -170,21 +170,29 @@ macro "term_derivation_item_path": tactic =>`(tactic|
 
 macro "term_derivation_sum": tactic =>`(tactic|
   first
+  | rfl; done
+  | ring; done
   | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
 )
 
 macro "term_derivation_sub": tactic =>`(tactic|
   first
+  | rfl; done
+  | ring; done
   | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
 )
 
 macro "term_derivation_product": tactic =>`(tactic|
   first
+  | rfl; done
+  | ring; done
   | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
 )
 
 macro "term_derivation_div": tactic =>`(tactic|
   first
+  | rfl; done
+  | ring; done
   | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
 )
 
@@ -343,21 +351,29 @@ macro "term_derivation_item_path": tactic =>`(tactic|
 
 macro "term_derivation_sum": tactic =>`(tactic|
   first
+  | rfl; done
+  | ring; done
   | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
 )
 
 macro "term_derivation_sub": tactic =>`(tactic|
   first
+  | rfl; done
+  | ring; done
   | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
 )
 
 macro "term_derivation_product": tactic =>`(tactic|
   first
+  | rfl; done
+  | ring; done
   | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
 )
 
 macro "term_derivation_div": tactic =>`(tactic|
   first
+  | rfl; done
+  | ring; done
   | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
 )
 
@@ -517,21 +533,29 @@ macro "term_derivation_item_path": tactic =>`(tactic|
 
 macro "term_derivation_sum": tactic =>`(tactic|
   first
+  | rfl; done
+  | ring; done
   | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
 )
 
 macro "term_derivation_sub": tactic =>`(tactic|
   first
+  | rfl; done
+  | ring; done
   | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
 )
 
 macro "term_derivation_product": tactic =>`(tactic|
   first
+  | rfl; done
+  | ring; done
   | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
 )
 
 macro "term_derivation_div": tactic =>`(tactic|
   first
+  | rfl; done
+  | ring; done
   | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
 )
 
@@ -696,21 +720,29 @@ macro "term_derivation_item_path": tactic =>`(tactic|
 
 macro "term_derivation_sum": tactic =>`(tactic|
   first
+  | rfl; done
+  | ring; done
   | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
 )
 
 macro "term_derivation_sub": tactic =>`(tactic|
   first
+  | rfl; done
+  | ring; done
   | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
 )
 
 macro "term_derivation_product": tactic =>`(tactic|
   first
+  | rfl; done
+  | ring; done
   | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
 )
 
 macro "term_derivation_div": tactic =>`(tactic|
   first
+  | rfl; done
+  | ring; done
   | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
 )
 
@@ -903,21 +935,29 @@ macro "term_derivation_item_path": tactic =>`(tactic|
 
 macro "term_derivation_sum": tactic =>`(tactic|
   first
+  | rfl; done
+  | ring; done
   | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
 )
 
 macro "term_derivation_sub": tactic =>`(tactic|
   first
+  | rfl; done
+  | ring; done
   | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
 )
 
 macro "term_derivation_product": tactic =>`(tactic|
   first
+  | rfl; done
+  | ring; done
   | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
 )
 
 macro "term_derivation_div": tactic =>`(tactic|
   first
+  | rfl; done
+  | ring; done
   | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
 )
 
@@ -1085,21 +1125,29 @@ macro "term_derivation_item_path": tactic =>`(tactic|
 
 macro "term_derivation_sum": tactic =>`(tactic|
   first
+  | rfl; done
+  | ring; done
   | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
 )
 
 macro "term_derivation_sub": tactic =>`(tactic|
   first
+  | rfl; done
+  | ring; done
   | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
 )
 
 macro "term_derivation_product": tactic =>`(tactic|
   first
+  | rfl; done
+  | ring; done
   | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
 )
 
 macro "term_derivation_div": tactic =>`(tactic|
   first
+  | rfl; done
+  | ring; done
   | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
 )
 
@@ -1279,21 +1327,29 @@ macro "term_derivation_item_path": tactic =>`(tactic|
 
 macro "term_derivation_sum": tactic =>`(tactic|
   first
+  | rfl; done
+  | ring; done
   | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
 )
 
 macro "term_derivation_sub": tactic =>`(tactic|
   first
+  | rfl; done
+  | ring; done
   | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
 )
 
 macro "term_derivation_product": tactic =>`(tactic|
   first
+  | rfl; done
+  | ring; done
   | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
 )
 
 macro "term_derivation_div": tactic =>`(tactic|
   first
+  | rfl; done
+  | ring; done
   | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
 )
 
@@ -1495,21 +1551,29 @@ macro "term_derivation_item_path": tactic =>`(tactic|
 
 macro "term_derivation_sum": tactic =>`(tactic|
   first
+  | rfl; done
+  | ring; done
   | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
 )
 
 macro "term_derivation_sub": tactic =>`(tactic|
   first
+  | rfl; done
+  | ring; done
   | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
 )
 
 macro "term_derivation_product": tactic =>`(tactic|
   first
+  | rfl; done
+  | ring; done
   | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
 )
 
 macro "term_derivation_div": tactic =>`(tactic|
   first
+  | rfl; done
+  | ring; done
   | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
 )
 
@@ -1705,21 +1769,29 @@ macro "term_derivation_item_path": tactic =>`(tactic|
 
 macro "term_derivation_sum": tactic =>`(tactic|
   first
+  | rfl; done
+  | ring; done
   | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
 )
 
 macro "term_derivation_sub": tactic =>`(tactic|
   first
+  | rfl; done
+  | ring; done
   | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
 )
 
 macro "term_derivation_product": tactic =>`(tactic|
   first
+  | rfl; done
+  | ring; done
   | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
 )
 
 macro "term_derivation_div": tactic =>`(tactic|
   first
+  | rfl; done
+  | ring; done
   | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
 )
 
