--- a/crates/visored/visored-pipeline/expect-files/visored-pipeline-works/batch0.tex
+++ b/crates/visored/visored-pipeline/expect-files/visored-pipeline-works/batch0.tex
@@ -173,21 +173,29 @@ macro "term_derivation_item_path": tactic =>`(tactic|
 
 macro "term_derivation_sum": tactic =>`(tactic|
   first
+  | rfl; done
+  | ring; done
   | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
 )
 
 macro "term_derivation_sub": tactic =>`(tactic|
   first
+  | rfl; done
+  | ring; done
   | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
 )
 
 macro "term_derivation_product": tactic =>`(tactic|
   first
+  | rfl; done
+  | ring; done
   | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
 )
 
 macro "term_derivation_div": tactic =>`(tactic|
   first
+  | rfl; done
+  | ring; done
   | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
 )
 
@@ -353,21 +361,29 @@ macro "term_derivation_item_path": tactic =>`(tactic|
 
 macro "term_derivation_sum": tactic =>`(tactic|
   first
+  | rfl; done
+  | ring; done
   | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
 )
 
 macro "term_derivation_sub": tactic =>`(tactic|
   first
+  | rfl; done
+  | ring; done
   | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
 )
 
 macro "term_derivation_product": tactic =>`(tactic|
   first
+  | rfl; done
+  | ring; done
   | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
 )
 
 macro "term_derivation_div": tactic =>`(tactic|
   first
+  | rfl; done
+  | ring; done
   | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
 )
 
@@ -562,21 +578,29 @@ macro "term_derivation_item_path": tactic =>`(tactic|
 
 macro "term_derivation_sum": tactic =>`(tactic|
   first
+  | rfl; done
+  | ring; done
   | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
 )
 
 macro "term_derivation_sub": tactic =>`(tactic|
   first
+  | rfl; done
+  | ring; done
   | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
 )
 
 macro "term_derivation_product": tactic =>`(tactic|
   first
+  | rfl; done
+  | ring; done
   | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
 )
 
 macro "term_derivation_div": tactic =>`(tactic|
   first
+  | rfl; done
+  | ring; done
   | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
 )
 
@@ -797,21 +821,29 @@ macro "term_derivation_item_path": tactic =>`(tactic|
 
 macro "term_derivation_sum": tactic =>`(tactic|
   first
+  | rfl; done
+  | ring; done
   | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
 )
 
 macro "term_derivation_sub": tactic =>`(tactic|
   first
+  | rfl; done
+  | ring; done
   | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
 )
 
 macro "term_derivation_product": tactic =>`(tactic|
   first
+  | rfl; done
+  | ring; done
   | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
 )
 
 macro "term_derivation_div": tactic =>`(tactic|
   first
+  | rfl; done
+  | ring; done
   | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
 )
 
@@ -992,21 +1024,29 @@ macro "term_derivation_item_path": tactic =>`(tactic|
 
 macro "term_derivation_sum": tactic =>`(tactic|
   first
+  | rfl; done
+  | ring; done
   | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
 )
 
 macro "term_derivation_sub": tactic =>`(tactic|
   first
+  | rfl; done
+  | ring; done
   | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
 )
 
 macro "term_derivation_product": tactic =>`(tactic|
   first
+  | rfl; done
+  | ring; done
   | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
 )
 
 macro "term_derivation_div": tactic =>`(tactic|
   first
+  | rfl; done
+  | ring; done
   | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
 )
 
