--- a/crates/visored/visored-pipeline/expect-files/visored-pipeline-works/batch0.tex
+++ b/crates/visored/visored-pipeline/expect-files/visored-pipeline-works/batch0.tex
@@ -416,7 +416,7 @@ def h (x : ℝ) (h1 : x ≥ (0 : ℝ)) (y : ℝ) (h2 : y ≥ (0 : ℝ)) : (x + y
   have h6 : (√ x - √ y) ^ 2 ≥ (0 : ℝ) := by apply square_nonnegative
   have h7 : x + y ≥ (2 : ℝ) * √ (x * y) := by
     have d : x = x := by term_derivation_variable
-    have d1 : (2 : ℝ) = (2 : ℝ) := by term_derivation_literal
+    have d1 : (2 : ℝ) = 2 := by term_derivation_literal
     have d2 : x = x := by term_derivation_variable
     have d3 : y = y := by term_derivation_variable
     have d4 : x * y = x * y := by term_derivation_product
@@ -425,18 +425,18 @@ def h (x : ℝ) (h1 : x ≥ (0 : ℝ)) (y : ℝ) (h2 : y ≥ (0 : ℝ)) : (x + y
     have d7 : x - (2 : ℝ) * √ (x * y) = x + (-2 : ℝ) * √ (x * y) := by term_derivation_sub
     have d8 : y = y := by term_derivation_variable
     have d9 : x - (2 : ℝ) * √ (x * y) + y = x + y + (-2 : ℝ) * √ (x * y) := by term_derivation_sum
-    have d10 : (0 : ℝ) = (0 : ℝ) := by term_derivation_literal
-    have d11 : x - (2 : ℝ) * √ (x * y) + y ≥ (0 : ℝ) = (x + y + (-2 : ℝ) * √ (x * y) ≥ (0 : ℝ)) := by term_derivation_chaining_separated_list
+    have d10 : (0 : ℝ) = 0 := by term_derivation_literal
+    have d11 : x - (2 : ℝ) * √ (x * y) + y ≥ (0 : ℝ) ↔ x + y + (-2 : ℝ) * √ (x * y) ≥ (0 : ℝ) := by term_derivation_chaining_separated_list
     have d12 : x = x := by term_derivation_variable
     have d13 : y = y := by term_derivation_variable
     have d14 : x + y = x + y := by term_derivation_sum
-    have d15 : (2 : ℝ) = (2 : ℝ) := by term_derivation_literal
+    have d15 : (2 : ℝ) = 2 := by term_derivation_literal
     have d16 : x = x := by term_derivation_variable
     have d17 : y = y := by term_derivation_variable
     have d18 : x * y = x * y := by term_derivation_product
     have d19 : √ (x * y) = √ (x * y) := by term_derivation_square
     have d20 : (2 : ℝ) * √ (x * y) = (2 : ℝ) * √ (x * y) := by term_derivation_product
-    have d21 : x + y ≥ (2 : ℝ) * √ (x * y) = (x + y + (-2 : ℝ) * √ (x * y) ≥ (0 : ℝ)) := by term_derivation_chaining_separated_list
+    have d21 : x + y ≥ (2 : ℝ) * √ (x * y) ↔ x + y + (-2 : ℝ) * √ (x * y) ≥ (0 : ℝ) := by term_derivation_chaining_separated_list
     have d22 : x + y ≥ (2 : ℝ) * √ (x * y) := by term_derivation_finalize
     term_derivation_finalize
   have h8 : (x + y) / (2 : ℝ) ≥ √ (x * y) := by obvious
@@ -662,8 +662,8 @@ def h (a b c : ℝ) : a ^ 2 + b ^ 2 + c ^ 2 ≥ a * b + b * c + c * a := by
     have d19 : a = a := by term_derivation_variable
     have d20 : c * a = c * a := by term_derivation_product
     have d21 : a ^ 2 + b ^ 2 + c ^ 2 - a * b - b * c - c * a = (-1 : ℝ) * b * a + (-1 : ℝ) * c * a + b ^ 2 + c ^ 2 + a ^ 2 + (-1 : ℝ) * c * b := by term_derivation_sub
-    have d22 : (0 : ℝ) = (0 : ℝ) := by term_derivation_literal
-    have d23 : a ^ 2 + b ^ 2 + c ^ 2 - a * b - b * c - c * a ≥ (0 : ℝ) = ((-1 : ℝ) * b * a + (-1 : ℝ) * c * a + b ^ 2 + c ^ 2 + a ^ 2 + (-1 : ℝ) * c * b ≥ (0 : ℝ)) := by term_derivation_chaining_separated_list
+    have d22 : (0 : ℝ) = 0 := by term_derivation_literal
+    have d23 : a ^ 2 + b ^ 2 + c ^ 2 - a * b - b * c - c * a ≥ (0 : ℝ) ↔ (-1 : ℝ) * b * a + (-1 : ℝ) * c * a + b ^ 2 + c ^ 2 + a ^ 2 + (-1 : ℝ) * c * b ≥ (0 : ℝ) := by term_derivation_chaining_separated_list
     have d24 : a = a := by term_derivation_variable
     have d25 : 2 = 2 := by term_derivation_literal
     have d26 : a ^ 2 = a ^ 2 := by term_derivation_power
@@ -684,7 +684,7 @@ def h (a b c : ℝ) : a ^ 2 + b ^ 2 + c ^ 2 ≥ a * b + b * c + c * a := by
     have d41 : a = a := by term_derivation_variable
     have d42 : c * a = c * a := by term_derivation_product
     have d43 : a * b + b * c + c * a = b * a + c * a + c * b := by term_derivation_sum
-    have d44 : a ^ 2 + b ^ 2 + c ^ 2 ≥ a * b + b * c + c * a = ((-1 : ℝ) * b * a + (-1 : ℝ) * c * a + b ^ 2 + c ^ 2 + a ^ 2 + (-1 : ℝ) * c * b ≥ (0 : ℝ)) := by term_derivation_chaining_separated_list
+    have d44 : a ^ 2 + b ^ 2 + c ^ 2 ≥ a * b + b * c + c * a ↔ (-1 : ℝ) * b * a + (-1 : ℝ) * c * a + b ^ 2 + c ^ 2 + a ^ 2 + (-1 : ℝ) * c * b ≥ (0 : ℝ) := by term_derivation_chaining_separated_list
     have d45 : a ^ 2 + b ^ 2 + c ^ 2 ≥ a * b + b * c + c * a := by term_derivation_finalize
     term_derivation_finalize
   obvious
@@ -1093,18 +1093,18 @@ def h (a b : ℝ) : (a ^ 2 + b ^ 2) / (2 : ℝ) ≥ ((a + b) / (2 : ℝ)) ^ 2 :=
     have d4 : 2 = 2 := by term_derivation_literal
     have d5 : b ^ 2 = b ^ 2 := by term_derivation_power
     have d6 : a ^ 2 + b ^ 2 = b ^ 2 + a ^ 2 := by term_derivation_sum
-    have d7 : (2 : ℝ) = (2 : ℝ) := by term_derivation_literal
+    have d7 : (2 : ℝ) = 2 := by term_derivation_literal
     have d8 : (a ^ 2 + b ^ 2) / (2 : ℝ) = ((1 : ℚ) / (2 : ℚ) : ℝ) * (b ^ 2) + ((1 : ℚ) / (2 : ℚ) : ℝ) * (a ^ 2) := by term_derivation_div
     have d9 : a = a := by term_derivation_variable
     have d10 : b = b := by term_derivation_variable
     have d11 : a + b = b + a := by term_derivation_sum
-    have d12 : (2 : ℝ) = (2 : ℝ) := by term_derivation_literal
+    have d12 : (2 : ℝ) = 2 := by term_derivation_literal
     have d13 : (a + b) / (2 : ℝ) = ((1 : ℚ) / (2 : ℚ) : ℝ) * b + ((1 : ℚ) / (2 : ℚ) : ℝ) * a := by term_derivation_div
     have d14 : 2 = 2 := by term_derivation_literal
     have d15 : ((a + b) / (2 : ℝ)) ^ 2 = (((1 : ℚ) / (2 : ℚ) : ℝ) * b + ((1 : ℚ) / (2 : ℚ) : ℝ) * a) ^ 2 := by term_derivation_power
     have d16 : (a ^ 2 + b ^ 2) / (2 : ℝ) - ((a + b) / (2 : ℝ)) ^ 2 = ((1 : ℚ) / (2 : ℚ) : ℝ) * (b ^ 2) + (-1 : ℝ) * ((((1 : ℚ) / (2 : ℚ) : ℝ) * b + ((1 : ℚ) / (2 : ℚ) : ℝ) * a) ^ 2) + ((1 : ℚ) / (2 : ℚ) : ℝ) * (a ^ 2) := by term_derivation_sub
-    have d17 : (0 : ℝ) = (0 : ℝ) := by term_derivation_literal
-    have d18 : (a ^ 2 + b ^ 2) / (2 : ℝ) - ((a + b) / (2 : ℝ)) ^ 2 ≥ (0 : ℝ) = (((1 : ℚ) / (2 : ℚ) : ℝ) * (b ^ 2) + (-1 : ℝ) * ((((1 : ℚ) / (2 : ℚ) : ℝ) * b + ((1 : ℚ) / (2 : ℚ) : ℝ) * a) ^ 2) + ((1 : ℚ) / (2 : ℚ) : ℝ) * (a ^ 2) ≥ (0 : ℝ)) := by term_derivation_chaining_separated_list
+    have d17 : (0 : ℝ) = 0 := by term_derivation_literal
+    have d18 : (a ^ 2 + b ^ 2) / (2 : ℝ) - ((a + b) / (2 : ℝ)) ^ 2 ≥ (0 : ℝ) ↔ ((1 : ℚ) / (2 : ℚ) : ℝ) * (b ^ 2) + (-1 : ℝ) * ((((1 : ℚ) / (2 : ℚ) : ℝ) * b + ((1 : ℚ) / (2 : ℚ) : ℝ) * a) ^ 2) + ((1 : ℚ) / (2 : ℚ) : ℝ) * (a ^ 2) ≥ (0 : ℝ) := by term_derivation_chaining_separated_list
     have d19 : a = a := by term_derivation_variable
     have d20 : 2 = 2 := by term_derivation_literal
     have d21 : a ^ 2 = a ^ 2 := by term_derivation_power
@@ -1112,16 +1112,16 @@ def h (a b : ℝ) : (a ^ 2 + b ^ 2) / (2 : ℝ) ≥ ((a + b) / (2 : ℝ)) ^ 2 :=
     have d23 : 2 = 2 := by term_derivation_literal
     have d24 : b ^ 2 = b ^ 2 := by term_derivation_power
     have d25 : a ^ 2 + b ^ 2 = b ^ 2 + a ^ 2 := by term_derivation_sum
-    have d26 : (2 : ℝ) = (2 : ℝ) := by term_derivation_literal
+    have d26 : (2 : ℝ) = 2 := by term_derivation_literal
     have d27 : (a ^ 2 + b ^ 2) / (2 : ℝ) = ((1 : ℚ) / (2 : ℚ) : ℝ) * (b ^ 2) + ((1 : ℚ) / (2 : ℚ) : ℝ) * (a ^ 2) := by term_derivation_div
     have d28 : a = a := by term_derivation_variable
     have d29 : b = b := by term_derivation_variable
     have d30 : a + b = b + a := by term_derivation_sum
-    have d31 : (2 : ℝ) = (2 : ℝ) := by term_derivation_literal
+    have d31 : (2 : ℝ) = 2 := by term_derivation_literal
     have d32 : (a + b) / (2 : ℝ) = ((1 : ℚ) / (2 : ℚ) : ℝ) * b + ((1 : ℚ) / (2 : ℚ) : ℝ) * a := by term_derivation_div
     have d33 : 2 = 2 := by term_derivation_literal
     have d34 : ((a + b) / (2 : ℝ)) ^ 2 = (((1 : ℚ) / (2 : ℚ) : ℝ) * b + ((1 : ℚ) / (2 : ℚ) : ℝ) * a) ^ 2 := by term_derivation_power
-    have d35 : (a ^ 2 + b ^ 2) / (2 : ℝ) ≥ ((a + b) / (2 : ℝ)) ^ 2 = (((1 : ℚ) / (2 : ℚ) : ℝ) * (b ^ 2) + (-1 : ℝ) * ((((1 : ℚ) / (2 : ℚ) : ℝ) * b + ((1 : ℚ) / (2 : ℚ) : ℝ) * a) ^ 2) + ((1 : ℚ) / (2 : ℚ) : ℝ) * (a ^ 2) ≥ (0 : ℝ)) := by term_derivation_chaining_separated_list
+    have d35 : (a ^ 2 + b ^ 2) / (2 : ℝ) ≥ ((a + b) / (2 : ℝ)) ^ 2 ↔ ((1 : ℚ) / (2 : ℚ) : ℝ) * (b ^ 2) + (-1 : ℝ) * ((((1 : ℚ) / (2 : ℚ) : ℝ) * b + ((1 : ℚ) / (2 : ℚ) : ℝ) * a) ^ 2) + ((1 : ℚ) / (2 : ℚ) : ℝ) * (a ^ 2) ≥ (0 : ℝ) := by term_derivation_chaining_separated_list
     have d36 : (a ^ 2 + b ^ 2) / (2 : ℝ) ≥ ((a + b) / (2 : ℝ)) ^ 2 := by term_derivation_finalize
     term_derivation_finalize
   obvious
