--- a/crates/visored/visored-pipeline/expect-files/visored-pipeline-works/batch1.tex
+++ b/crates/visored/visored-pipeline/expect-files/visored-pipeline-works/batch1.tex
@@ -196,18 +196,20 @@ macro "term_derivation_div": tactic =>`(tactic|
   | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
 )
 
-macro "term_derivation_finalize": tactic =>`(tactic|
-  first
-  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+macro "term_derivation_finalize" d1:term:1024 d2:term:1024 : tactic =>`(tactic|
+  (apply (Iff.mpr $d2); apply (Iff.mp $d1); assumption)
 )
 
 macro "term_derivation_chaining_separated_list": tactic =>`(tactic|
   first
+  | ring; done
+  | (constructor; repeat (intro h; linarith))
   | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
 )
 
 macro "term_derivation_square": tactic =>`(tactic|
   first
+  | ring; done
   | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
 )
 
@@ -377,18 +379,20 @@ macro "term_derivation_div": tactic =>`(tactic|
   | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
 )
 
-macro "term_derivation_finalize": tactic =>`(tactic|
-  first
-  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+macro "term_derivation_finalize" d1:term:1024 d2:term:1024 : tactic =>`(tactic|
+  (apply (Iff.mpr $d2); apply (Iff.mp $d1); assumption)
 )
 
 macro "term_derivation_chaining_separated_list": tactic =>`(tactic|
   first
+  | ring; done
+  | (constructor; repeat (intro h; linarith))
   | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
 )
 
 macro "term_derivation_square": tactic =>`(tactic|
   first
+  | ring; done
   | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
 )
 
@@ -559,18 +563,20 @@ macro "term_derivation_div": tactic =>`(tactic|
   | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
 )
 
-macro "term_derivation_finalize": tactic =>`(tactic|
-  first
-  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+macro "term_derivation_finalize" d1:term:1024 d2:term:1024 : tactic =>`(tactic|
+  (apply (Iff.mpr $d2); apply (Iff.mp $d1); assumption)
 )
 
 macro "term_derivation_chaining_separated_list": tactic =>`(tactic|
   first
+  | ring; done
+  | (constructor; repeat (intro h; linarith))
   | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
 )
 
 macro "term_derivation_square": tactic =>`(tactic|
   first
+  | ring; done
   | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
 )
 
@@ -746,18 +752,20 @@ macro "term_derivation_div": tactic =>`(tactic|
   | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
 )
 
-macro "term_derivation_finalize": tactic =>`(tactic|
-  first
-  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+macro "term_derivation_finalize" d1:term:1024 d2:term:1024 : tactic =>`(tactic|
+  (apply (Iff.mpr $d2); apply (Iff.mp $d1); assumption)
 )
 
 macro "term_derivation_chaining_separated_list": tactic =>`(tactic|
   first
+  | ring; done
+  | (constructor; repeat (intro h; linarith))
   | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
 )
 
 macro "term_derivation_square": tactic =>`(tactic|
   first
+  | ring; done
   | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
 )
 
@@ -961,18 +969,20 @@ macro "term_derivation_div": tactic =>`(tactic|
   | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
 )
 
-macro "term_derivation_finalize": tactic =>`(tactic|
-  first
-  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+macro "term_derivation_finalize" d1:term:1024 d2:term:1024 : tactic =>`(tactic|
+  (apply (Iff.mpr $d2); apply (Iff.mp $d1); assumption)
 )
 
 macro "term_derivation_chaining_separated_list": tactic =>`(tactic|
   first
+  | ring; done
+  | (constructor; repeat (intro h; linarith))
   | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
 )
 
 macro "term_derivation_square": tactic =>`(tactic|
   first
+  | ring; done
   | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
 )
 
@@ -1151,18 +1161,20 @@ macro "term_derivation_div": tactic =>`(tactic|
   | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
 )
 
-macro "term_derivation_finalize": tactic =>`(tactic|
-  first
-  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+macro "term_derivation_finalize" d1:term:1024 d2:term:1024 : tactic =>`(tactic|
+  (apply (Iff.mpr $d2); apply (Iff.mp $d1); assumption)
 )
 
 macro "term_derivation_chaining_separated_list": tactic =>`(tactic|
   first
+  | ring; done
+  | (constructor; repeat (intro h; linarith))
   | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
 )
 
 macro "term_derivation_square": tactic =>`(tactic|
   first
+  | ring; done
   | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
 )
 
@@ -1353,18 +1365,20 @@ macro "term_derivation_div": tactic =>`(tactic|
   | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
 )
 
-macro "term_derivation_finalize": tactic =>`(tactic|
-  first
-  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+macro "term_derivation_finalize" d1:term:1024 d2:term:1024 : tactic =>`(tactic|
+  (apply (Iff.mpr $d2); apply (Iff.mp $d1); assumption)
 )
 
 macro "term_derivation_chaining_separated_list": tactic =>`(tactic|
   first
+  | ring; done
+  | (constructor; repeat (intro h; linarith))
   | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
 )
 
 macro "term_derivation_square": tactic =>`(tactic|
   first
+  | ring; done
   | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
 )
 
@@ -1577,18 +1591,20 @@ macro "term_derivation_div": tactic =>`(tactic|
   | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
 )
 
-macro "term_derivation_finalize": tactic =>`(tactic|
-  first
-  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+macro "term_derivation_finalize" d1:term:1024 d2:term:1024 : tactic =>`(tactic|
+  (apply (Iff.mpr $d2); apply (Iff.mp $d1); assumption)
 )
 
 macro "term_derivation_chaining_separated_list": tactic =>`(tactic|
   first
+  | ring; done
+  | (constructor; repeat (intro h; linarith))
   | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
 )
 
 macro "term_derivation_square": tactic =>`(tactic|
   first
+  | ring; done
   | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
 )
 
@@ -1795,18 +1811,20 @@ macro "term_derivation_div": tactic =>`(tactic|
   | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
 )
 
-macro "term_derivation_finalize": tactic =>`(tactic|
-  first
-  | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
+macro "term_derivation_finalize" d1:term:1024 d2:term:1024 : tactic =>`(tactic|
+  (apply (Iff.mpr $d2); apply (Iff.mp $d1); assumption)
 )
 
 macro "term_derivation_chaining_separated_list": tactic =>`(tactic|
   first
+  | ring; done
+  | (constructor; repeat (intro h; linarith))
   | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
 )
 
 macro "term_derivation_square": tactic =>`(tactic|
   first
+  | ring; done
   | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
 )
 
