--- a/crates/visored/visored-pipeline/expect-files/visored-pipeline-works/batch0.tex
+++ b/crates/visored/visored-pipeline/expect-files/visored-pipeline-works/batch0.tex
@@ -224,7 +224,7 @@ macro "term_derivation_power": tactic =>`(tactic|
 )
 
 def h (a b : ℝ) : (a + b) ^ 2 ≥ (0 : ℝ) := by
-  have h1 : (a + b) ^ 2 ≥ (0 : ℝ) := by apply square_nonnegative
+  have h1 : (a + b) ^ 2 ≥ (0 : ℝ) := by apply sq_nonneg
   obvious
 
 \end{lstlisting}
@@ -417,7 +417,7 @@ def h (x : ℝ) (h1 : x ≥ (0 : ℝ)) (y : ℝ) (h2 : y ≥ (0 : ℝ)) : (x + y
   have h3 : (√ x - √ y) ^ 2 = √ x ^ 2 - (2 : ℝ) * √ x * √ y + √ y ^ 2 := by obvious
   have h4 : √ x ^ 2 - (2 : ℝ) * √ x * √ y + √ y ^ 2 = x - (2 : ℝ) * √ (x * y) + y := by obvious
   have h5 : x - (2 : ℝ) * √ (x * y) + y ≥ (0 : ℝ) := by obvious
-  have h6 : (√ x - √ y) ^ 2 ≥ (0 : ℝ) := by apply square_nonnegative
+  have h6 : (√ x - √ y) ^ 2 ≥ (0 : ℝ) := by apply sq_nonneg
   have h7 : x + y ≥ (2 : ℝ) * √ (x * y) := by
     have d : x = x := by term_derivation_variable
     have d1 : (2 : ℝ) = 2 := by term_derivation_literal
