--- a/crates/visored/visored-pipeline/expect-files/visored-pipeline-works/batch1.tex
+++ b/crates/visored/visored-pipeline/expect-files/visored-pipeline-works/batch1.tex
@@ -404,7 +404,7 @@ macro "term_derivation_power": tactic =>`(tactic|
 )
 
 def h (x : ℝ) : x ^ 2 ≥ (0 : ℝ) := by
-  have h1 : x ^ 2 ≥ (0 : ℝ) := by apply square_nonnegative
+  have h1 : x ^ 2 ≥ (0 : ℝ) := by apply sq_nonneg
   obvious
 
 \end{lstlisting}
@@ -1395,7 +1395,7 @@ def h (x : ℝ) (h1 : x > (0 : ℝ)) (y : ℝ) (h2 : y > (0 : ℝ)) : (1 : ℝ) 
   have h5 : in_set := by obvious
   have h6 : y > (0 : ℝ) := by old_main_hypothesis
   have h15 : (1 : ℝ) / x + (1 : ℝ) / y ≥ (4 : ℝ) / (x + y) := by
-    have h7 : (x - y) ^ 2 ≥ (0 : ℝ) := by apply square_nonnegative
+    have h7 : (x - y) ^ 2 ≥ (0 : ℝ) := by apply sq_nonneg
     first
     | have h8 : (x - y) ^ 2 ≥ (0 : ℝ) := by calc
       (x - y) ^ 2 = x ^ 2 - (2 : ℝ) * x * y + y ^ 2 := by obvious
