--- a/crates/visored/visored-pipeline/expect-files/visored-pipeline-works/batch1.tex
+++ b/crates/visored/visored-pipeline/expect-files/visored-pipeline-works/batch1.tex
@@ -793,11 +793,11 @@ def h (x : ℝ) (h1 : x > (0 : ℝ)) : x + (1 : ℝ) / x ≥ (2 : ℝ) := by
     have d3 : (2 : ℝ) = 2 := by term_derivation_literal
     have d4 : x = x := by term_derivation_variable
     have d5 : (2 : ℝ) * x = (2 : ℝ) * x := by term_derivation_product
-    have d6 : x ^ 2 - (2 : ℝ) * x = (-2 : ℝ) * x + x ^ 2 := by term_derivation_sub
+    have d6 : x ^ 2 - (2 : ℝ) * x = (((-2 : ℤ)) : ℝ) * x + x ^ 2 := by term_derivation_sub
     have d7 : (1 : ℝ) = 1 := by term_derivation_literal
-    have d8 : x ^ 2 - (2 : ℝ) * x + (1 : ℝ) = (1 : ℝ) + (-2 : ℝ) * x + x ^ 2 := by term_derivation_sum
+    have d8 : x ^ 2 - (2 : ℝ) * x + (1 : ℝ) = (1 : ℝ) + (((-2 : ℤ)) : ℝ) * x + x ^ 2 := by term_derivation_sum
     have d9 : (0 : ℝ) = 0 := by term_derivation_literal
-    have d10 : x ^ 2 - (2 : ℝ) * x + (1 : ℝ) ≥ (0 : ℝ) ↔ (1 : ℝ) + (-2 : ℝ) * x + x ^ 2 ≥ (0 : ℝ) := by term_derivation_chaining_separated_list
+    have d10 : x ^ 2 - (2 : ℝ) * x + (1 : ℝ) ≥ (0 : ℝ) ↔ (1 : ℝ) + (((-2 : ℤ)) : ℝ) * x + x ^ 2 ≥ (0 : ℝ) := by term_derivation_chaining_separated_list
     have d11 : x = x := by term_derivation_variable
     have d12 : 2 = 2 := by term_derivation_literal
     have d13 : x ^ 2 = x ^ 2 := by term_derivation_power
@@ -806,7 +806,7 @@ def h (x : ℝ) (h1 : x > (0 : ℝ)) : x + (1 : ℝ) / x ≥ (2 : ℝ) := by
     have d16 : (2 : ℝ) = 2 := by term_derivation_literal
     have d17 : x = x := by term_derivation_variable
     have d18 : (2 : ℝ) * x = (2 : ℝ) * x := by term_derivation_product
-    have d19 : x ^ 2 + (1 : ℝ) ≥ (2 : ℝ) * x ↔ (1 : ℝ) + (-2 : ℝ) * x + x ^ 2 ≥ (0 : ℝ) := by term_derivation_chaining_separated_list
+    have d19 : x ^ 2 + (1 : ℝ) ≥ (2 : ℝ) * x ↔ (1 : ℝ) + (((-2 : ℤ)) : ℝ) * x + x ^ 2 ≥ (0 : ℝ) := by term_derivation_chaining_separated_list
     have d20 : x ^ 2 + (1 : ℝ) ≥ (2 : ℝ) * x := by term_derivation_finalize d10 d19
     assumption
   have h7 : x > (0 : ℝ) := by old_main_hypothesis
@@ -1631,24 +1631,24 @@ def h (a b : ℝ) (h1 : a > (0 : ℝ)) (h2 : b > (0 : ℝ)) : a / b + b / a ≥ 
   have h8 : a / b + b / a ≥ (2 : ℝ) := by
     have d : a = a := by term_derivation_variable
     have d1 : b = b := by term_derivation_variable
-    have d2 : a / b = b ^ (-1) * a := by term_derivation_div
+    have d2 : a / b = b ^ ((-1 : ℤ)) * a := by term_derivation_div
     have d3 : (2 : ℝ) = 2 := by term_derivation_literal
-    have d4 : a / b - (2 : ℝ) = (-2 : ℝ) + b ^ (-1) * a := by term_derivation_sub
+    have d4 : a / b - (2 : ℝ) = (((-2 : ℤ)) : ℝ) + b ^ ((-1 : ℤ)) * a := by term_derivation_sub
     have d5 : b = b := by term_derivation_variable
     have d6 : a = a := by term_derivation_variable
-    have d7 : b / a = b * a ^ (-1) := by term_derivation_div
-    have d8 : a / b - (2 : ℝ) + b / a = (-2 : ℝ) + b ^ (-1) * a + b * a ^ (-1) := by term_derivation_sum
+    have d7 : b / a = b * a ^ ((-1 : ℤ)) := by term_derivation_div
+    have d8 : a / b - (2 : ℝ) + b / a = (((-2 : ℤ)) : ℝ) + b ^ ((-1 : ℤ)) * a + b * a ^ ((-1 : ℤ)) := by term_derivation_sum
     have d9 : (0 : ℝ) = 0 := by term_derivation_literal
-    have d10 : a / b - (2 : ℝ) + b / a ≥ (0 : ℝ) ↔ (-2 : ℝ) + b ^ (-1) * a + b * a ^ (-1) ≥ (0 : ℝ) := by term_derivation_chaining_separated_list
+    have d10 : a / b - (2 : ℝ) + b / a ≥ (0 : ℝ) ↔ (((-2 : ℤ)) : ℝ) + b ^ ((-1 : ℤ)) * a + b * a ^ ((-1 : ℤ)) ≥ (0 : ℝ) := by term_derivation_chaining_separated_list
     have d11 : a = a := by term_derivation_variable
     have d12 : b = b := by term_derivation_variable
-    have d13 : a / b = b ^ (-1) * a := by term_derivation_div
+    have d13 : a / b = b ^ ((-1 : ℤ)) * a := by term_derivation_div
     have d14 : b = b := by term_derivation_variable
     have d15 : a = a := by term_derivation_variable
-    have d16 : b / a = b * a ^ (-1) := by term_derivation_div
-    have d17 : a / b + b / a = b ^ (-1) * a + b * a ^ (-1) := by term_derivation_sum
+    have d16 : b / a = b * a ^ ((-1 : ℤ)) := by term_derivation_div
+    have d17 : a / b + b / a = b ^ ((-1 : ℤ)) * a + b * a ^ ((-1 : ℤ)) := by term_derivation_sum
     have d18 : (2 : ℝ) = 2 := by term_derivation_literal
-    have d19 : a / b + b / a ≥ (2 : ℝ) ↔ (-2 : ℝ) + b ^ (-1) * a + b * a ^ (-1) ≥ (0 : ℝ) := by term_derivation_chaining_separated_list
+    have d19 : a / b + b / a ≥ (2 : ℝ) ↔ (((-2 : ℤ)) : ℝ) + b ^ ((-1 : ℤ)) * a + b * a ^ ((-1 : ℤ)) ≥ (0 : ℝ) := by term_derivation_chaining_separated_list
     have d20 : a / b + b / a ≥ (2 : ℝ) := by term_derivation_finalize d10 d19
     assumption
   obvious
