lean tactics are hard to use

--- a/crates/visored/visored-pipeline/expect-files/visored-pipeline-works/batch1.tex
+++ b/crates/visored/visored-pipeline/expect-files/visored-pipeline-works/batch1.tex
@@ -193,6 +193,7 @@ macro "term_derivation_div": tactic =>`(tactic|
   first
   | rfl; done
   | ring; done
+  | field_simp; done
   | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
 )
 
@@ -376,6 +377,7 @@ macro "term_derivation_div": tactic =>`(tactic|
   first
   | rfl; done
   | ring; done
+  | field_simp; done
   | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
 )
 
@@ -560,6 +562,7 @@ macro "term_derivation_div": tactic =>`(tactic|
   first
   | rfl; done
   | ring; done
+  | field_simp; done
   | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
 )
 
@@ -749,6 +752,7 @@ macro "term_derivation_div": tactic =>`(tactic|
   first
   | rfl; done
   | ring; done
+  | field_simp; done
   | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
 )
 
@@ -966,6 +970,7 @@ macro "term_derivation_div": tactic =>`(tactic|
   first
   | rfl; done
   | ring; done
+  | field_simp; done
   | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
 )
 
@@ -1158,6 +1163,7 @@ macro "term_derivation_div": tactic =>`(tactic|
   first
   | rfl; done
   | ring; done
+  | field_simp; done
   | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
 )
 
@@ -1362,6 +1368,7 @@ macro "term_derivation_div": tactic =>`(tactic|
   first
   | rfl; done
   | ring; done
+  | field_simp; done
   | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
 )
 
@@ -1588,6 +1595,7 @@ macro "term_derivation_div": tactic =>`(tactic|
   first
   | rfl; done
   | ring; done
+  | field_simp; done
   | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
 )
 
@@ -1808,6 +1816,7 @@ macro "term_derivation_div": tactic =>`(tactic|
   first
   | rfl; done
   | ring; done
+  | field_simp; done
   | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
 )
 
