--- a/crates/visored/visored-pipeline/expect-files/visored-pipeline-works/batch0.tex
+++ b/crates/visored/visored-pipeline/expect-files/visored-pipeline-works/batch0.tex
@@ -196,6 +196,7 @@ macro "term_derivation_div": tactic =>`(tactic|
   first
   | rfl; done
   | ring; done
+  | field_simp; done
   | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
 )
 
@@ -386,6 +387,7 @@ macro "term_derivation_div": tactic =>`(tactic|
   first
   | rfl; done
   | ring; done
+  | field_simp; done
   | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
 )
 
@@ -605,6 +607,7 @@ macro "term_derivation_div": tactic =>`(tactic|
   first
   | rfl; done
   | ring; done
+  | field_simp; done
   | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
 )
 
@@ -850,6 +853,7 @@ macro "term_derivation_div": tactic =>`(tactic|
   first
   | rfl; done
   | ring; done
+  | field_simp; done
   | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
 )
 
@@ -1055,6 +1059,7 @@ macro "term_derivation_div": tactic =>`(tactic|
   first
   | rfl; done
   | ring; done
+  | field_simp; done
   | fail "Could not prove this goal automatically. Afterall, this is an ad hoc implementation."
 )
 
