--- a/crates/visored/visored-pipeline/expect-files/visored-pipeline-works/batch0.tex
+++ b/crates/visored/visored-pipeline/expect-files/visored-pipeline-works/batch0.tex
@@ -154,7 +154,7 @@ macro "litnum_bound": tactic =>`(tactic|
 
 
 -- Reflection
-theorem term_derivation_reflection : true := by sorry
+theorem term_derivation_reflection {α} {a : α} : a = a := by rfl
 
 -- NumComparison
 theorem term_derivation_num_comparison : true := by sorry
@@ -184,7 +184,7 @@ theorem term_derivation_addition_inverse : true := by sorry
 theorem term_derivation_addition_distributivity : true := by sorry
 
 -- NegLiteral
-theorem term_derivation_neg_literal : true := by sorry
+macro "term_derivation_neg_literal" : term => `(by rfl)
 
 -- NegEq
 theorem term_derivation_neg_eq : true := by sorry
@@ -437,7 +437,7 @@ macro "litnum_bound": tactic =>`(tactic|
 
 
 -- Reflection
-theorem term_derivation_reflection : true := by sorry
+theorem term_derivation_reflection {α} {a : α} : a = a := by rfl
 
 -- NumComparison
 theorem term_derivation_num_comparison : true := by sorry
@@ -467,7 +467,7 @@ theorem term_derivation_addition_inverse : true := by sorry
 theorem term_derivation_addition_distributivity : true := by sorry
 
 -- NegLiteral
-theorem term_derivation_neg_literal : true := by sorry
+macro "term_derivation_neg_literal" : term => `(by rfl)
 
 -- NegEq
 theorem term_derivation_neg_eq : true := by sorry
@@ -826,7 +826,7 @@ macro "litnum_bound": tactic =>`(tactic|
 
 
 -- Reflection
-theorem term_derivation_reflection : true := by sorry
+theorem term_derivation_reflection {α} {a : α} : a = a := by rfl
 
 -- NumComparison
 theorem term_derivation_num_comparison : true := by sorry
@@ -856,7 +856,7 @@ theorem term_derivation_addition_inverse : true := by sorry
 theorem term_derivation_addition_distributivity : true := by sorry
 
 -- NegLiteral
-theorem term_derivation_neg_literal : true := by sorry
+macro "term_derivation_neg_literal" : term => `(by rfl)
 
 -- NegEq
 theorem term_derivation_neg_eq : true := by sorry
@@ -1375,7 +1375,7 @@ macro "litnum_bound": tactic =>`(tactic|
 
 
 -- Reflection
-theorem term_derivation_reflection : true := by sorry
+theorem term_derivation_reflection {α} {a : α} : a = a := by rfl
 
 -- NumComparison
 theorem term_derivation_num_comparison : true := by sorry
@@ -1405,7 +1405,7 @@ theorem term_derivation_addition_inverse : true := by sorry
 theorem term_derivation_addition_distributivity : true := by sorry
 
 -- NegLiteral
-theorem term_derivation_neg_literal : true := by sorry
+macro "term_derivation_neg_literal" : term => `(by rfl)
 
 -- NegEq
 theorem term_derivation_neg_eq : true := by sorry
@@ -1673,7 +1673,7 @@ macro "litnum_bound": tactic =>`(tactic|
 
 
 -- Reflection
-theorem term_derivation_reflection : true := by sorry
+theorem term_derivation_reflection {α} {a : α} : a = a := by rfl
 
 -- NumComparison
 theorem term_derivation_num_comparison : true := by sorry
@@ -1703,7 +1703,7 @@ theorem term_derivation_addition_inverse : true := by sorry
 theorem term_derivation_addition_distributivity : true := by sorry
 
 -- NegLiteral
-theorem term_derivation_neg_literal : true := by sorry
+macro "term_derivation_neg_literal" : term => `(by rfl)
 
 -- NegEq
 theorem term_derivation_neg_eq : true := by sorry
