--- a/crates/visored/visored-pipeline/expect-files/visored-pipeline-works/batch1.tex
+++ b/crates/visored/visored-pipeline/expect-files/visored-pipeline-works/batch1.tex
@@ -151,7 +151,7 @@ macro "litnum_bound": tactic =>`(tactic|
 
 
 -- Reflection
-theorem term_derivation_reflection : true := by sorry
+theorem term_derivation_reflection {α} {a : α} : a = a := by rfl
 
 -- NumComparison
 theorem term_derivation_num_comparison : true := by sorry
@@ -181,7 +181,7 @@ theorem term_derivation_addition_inverse : true := by sorry
 theorem term_derivation_addition_distributivity : true := by sorry
 
 -- NegLiteral
-theorem term_derivation_neg_literal : true := by sorry
+macro "term_derivation_neg_literal" : term => `(by rfl)
 
 -- NegEq
 theorem term_derivation_neg_eq : true := by sorry
@@ -427,7 +427,7 @@ macro "litnum_bound": tactic =>`(tactic|
 
 
 -- Reflection
-theorem term_derivation_reflection : true := by sorry
+theorem term_derivation_reflection {α} {a : α} : a = a := by rfl
 
 -- NumComparison
 theorem term_derivation_num_comparison : true := by sorry
@@ -457,7 +457,7 @@ theorem term_derivation_addition_inverse : true := by sorry
 theorem term_derivation_addition_distributivity : true := by sorry
 
 -- NegLiteral
-theorem term_derivation_neg_literal : true := by sorry
+macro "term_derivation_neg_literal" : term => `(by rfl)
 
 -- NegEq
 theorem term_derivation_neg_eq : true := by sorry
@@ -704,7 +704,7 @@ macro "litnum_bound": tactic =>`(tactic|
 
 
 -- Reflection
-theorem term_derivation_reflection : true := by sorry
+theorem term_derivation_reflection {α} {a : α} : a = a := by rfl
 
 -- NumComparison
 theorem term_derivation_num_comparison : true := by sorry
@@ -734,7 +734,7 @@ theorem term_derivation_addition_inverse : true := by sorry
 theorem term_derivation_addition_distributivity : true := by sorry
 
 -- NegLiteral
-theorem term_derivation_neg_literal : true := by sorry
+macro "term_derivation_neg_literal" : term => `(by rfl)
 
 -- NegEq
 theorem term_derivation_neg_eq : true := by sorry
@@ -986,7 +986,7 @@ macro "litnum_bound": tactic =>`(tactic|
 
 
 -- Reflection
-theorem term_derivation_reflection : true := by sorry
+theorem term_derivation_reflection {α} {a : α} : a = a := by rfl
 
 -- NumComparison
 theorem term_derivation_num_comparison : true := by sorry
@@ -1016,7 +1016,7 @@ theorem term_derivation_addition_inverse : true := by sorry
 theorem term_derivation_addition_distributivity : true := by sorry
 
 -- NegLiteral
-theorem term_derivation_neg_literal : true := by sorry
+macro "term_derivation_neg_literal" : term => `(by rfl)
 
 -- NegEq
 theorem term_derivation_neg_eq : true := by sorry
@@ -1346,7 +1346,7 @@ macro "litnum_bound": tactic =>`(tactic|
 
 
 -- Reflection
-theorem term_derivation_reflection : true := by sorry
+theorem term_derivation_reflection {α} {a : α} : a = a := by rfl
 
 -- NumComparison
 theorem term_derivation_num_comparison : true := by sorry
@@ -1376,7 +1376,7 @@ theorem term_derivation_addition_inverse : true := by sorry
 theorem term_derivation_addition_distributivity : true := by sorry
 
 -- NegLiteral
-theorem term_derivation_neg_literal : true := by sorry
+macro "term_derivation_neg_literal" : term => `(by rfl)
 
 -- NegEq
 theorem term_derivation_neg_eq : true := by sorry
@@ -1631,7 +1631,7 @@ macro "litnum_bound": tactic =>`(tactic|
 
 
 -- Reflection
-theorem term_derivation_reflection : true := by sorry
+theorem term_derivation_reflection {α} {a : α} : a = a := by rfl
 
 -- NumComparison
 theorem term_derivation_num_comparison : true := by sorry
@@ -1661,7 +1661,7 @@ theorem term_derivation_addition_inverse : true := by sorry
 theorem term_derivation_addition_distributivity : true := by sorry
 
 -- NegLiteral
-theorem term_derivation_neg_literal : true := by sorry
+macro "term_derivation_neg_literal" : term => `(by rfl)
 
 -- NegEq
 theorem term_derivation_neg_eq : true := by sorry
@@ -1928,7 +1928,7 @@ macro "litnum_bound": tactic =>`(tactic|
 
 
 -- Reflection
-theorem term_derivation_reflection : true := by sorry
+theorem term_derivation_reflection {α} {a : α} : a = a := by rfl
 
 -- NumComparison
 theorem term_derivation_num_comparison : true := by sorry
@@ -1958,7 +1958,7 @@ theorem term_derivation_addition_inverse : true := by sorry
 theorem term_derivation_addition_distributivity : true := by sorry
 
 -- NegLiteral
-theorem term_derivation_neg_literal : true := by sorry
+macro "term_derivation_neg_literal" : term => `(by rfl)
 
 -- NegEq
 theorem term_derivation_neg_eq : true := by sorry
@@ -2247,7 +2247,7 @@ macro "litnum_bound": tactic =>`(tactic|
 
 
 -- Reflection
-theorem term_derivation_reflection : true := by sorry
+theorem term_derivation_reflection {α} {a : α} : a = a := by rfl
 
 -- NumComparison
 theorem term_derivation_num_comparison : true := by sorry
@@ -2277,7 +2277,7 @@ theorem term_derivation_addition_inverse : true := by sorry
 theorem term_derivation_addition_distributivity : true := by sorry
 
 -- NegLiteral
-theorem term_derivation_neg_literal : true := by sorry
+macro "term_derivation_neg_literal" : term => `(by rfl)
 
 -- NegEq
 theorem term_derivation_neg_eq : true := by sorry
@@ -2629,7 +2629,7 @@ macro "litnum_bound": tactic =>`(tactic|
 
 
 -- Reflection
-theorem term_derivation_reflection : true := by sorry
+theorem term_derivation_reflection {α} {a : α} : a = a := by rfl
 
 -- NumComparison
 theorem term_derivation_num_comparison : true := by sorry
@@ -2659,7 +2659,7 @@ theorem term_derivation_addition_inverse : true := by sorry
 theorem term_derivation_addition_distributivity : true := by sorry
 
 -- NegLiteral
-theorem term_derivation_neg_literal : true := by sorry
+macro "term_derivation_neg_literal" : term => `(by rfl)
 
 -- NegEq
 theorem term_derivation_neg_eq : true := by sorry
