--- a/crates/visored/visored-pipeline/expect-files/visored-pipeline-works/batch0.tex
+++ b/crates/visored/visored-pipeline/expect-files/visored-pipeline-works/batch0.tex
@@ -184,7 +184,7 @@ theorem term_derivation_addition_inverse : true := by sorry
 theorem term_derivation_addition_distributivity : true := by sorry
 
 -- NegLiteral
-macro "term_derivation_neg_literal" : term => `(by rfl)
+theorem term_derivation_neg_literal { α } { a : α } [Neg α] : -a = -a := by rfl
 
 -- NegEq
 theorem term_derivation_neg_eq : true := by sorry
@@ -467,7 +467,7 @@ theorem term_derivation_addition_inverse : true := by sorry
 theorem term_derivation_addition_distributivity : true := by sorry
 
 -- NegLiteral
-macro "term_derivation_neg_literal" : term => `(by rfl)
+theorem term_derivation_neg_literal { α } { a : α } [Neg α] : -a = -a := by rfl
 
 -- NegEq
 theorem term_derivation_neg_eq : true := by sorry
@@ -856,7 +856,7 @@ theorem term_derivation_addition_inverse : true := by sorry
 theorem term_derivation_addition_distributivity : true := by sorry
 
 -- NegLiteral
-macro "term_derivation_neg_literal" : term => `(by rfl)
+theorem term_derivation_neg_literal { α } { a : α } [Neg α] : -a = -a := by rfl
 
 -- NegEq
 theorem term_derivation_neg_eq : true := by sorry
@@ -1405,7 +1405,7 @@ theorem term_derivation_addition_inverse : true := by sorry
 theorem term_derivation_addition_distributivity : true := by sorry
 
 -- NegLiteral
-macro "term_derivation_neg_literal" : term => `(by rfl)
+theorem term_derivation_neg_literal { α } { a : α } [Neg α] : -a = -a := by rfl
 
 -- NegEq
 theorem term_derivation_neg_eq : true := by sorry
@@ -1703,7 +1703,7 @@ theorem term_derivation_addition_inverse : true := by sorry
 theorem term_derivation_addition_distributivity : true := by sorry
 
 -- NegLiteral
-macro "term_derivation_neg_literal" : term => `(by rfl)
+theorem term_derivation_neg_literal { α } { a : α } [Neg α] : -a = -a := by rfl
 
 -- NegEq
 theorem term_derivation_neg_eq : true := by sorry
