--- a/crates/visored/visored-pipeline/expect-files/visored-pipeline-works/batch1.tex
+++ b/crates/visored/visored-pipeline/expect-files/visored-pipeline-works/batch1.tex
@@ -181,7 +181,7 @@ theorem term_derivation_addition_inverse : true := by sorry
 theorem term_derivation_addition_distributivity : true := by sorry
 
 -- NegLiteral
-macro "term_derivation_neg_literal" : term => `(by rfl)
+theorem term_derivation_neg_literal { α } { a : α } [Neg α] : -a = -a := by rfl
 
 -- NegEq
 theorem term_derivation_neg_eq : true := by sorry
@@ -457,7 +457,7 @@ theorem term_derivation_addition_inverse : true := by sorry
 theorem term_derivation_addition_distributivity : true := by sorry
 
 -- NegLiteral
-macro "term_derivation_neg_literal" : term => `(by rfl)
+theorem term_derivation_neg_literal { α } { a : α } [Neg α] : -a = -a := by rfl
 
 -- NegEq
 theorem term_derivation_neg_eq : true := by sorry
@@ -734,7 +734,7 @@ theorem term_derivation_addition_inverse : true := by sorry
 theorem term_derivation_addition_distributivity : true := by sorry
 
 -- NegLiteral
-macro "term_derivation_neg_literal" : term => `(by rfl)
+theorem term_derivation_neg_literal { α } { a : α } [Neg α] : -a = -a := by rfl
 
 -- NegEq
 theorem term_derivation_neg_eq : true := by sorry
@@ -1016,7 +1016,7 @@ theorem term_derivation_addition_inverse : true := by sorry
 theorem term_derivation_addition_distributivity : true := by sorry
 
 -- NegLiteral
-macro "term_derivation_neg_literal" : term => `(by rfl)
+theorem term_derivation_neg_literal { α } { a : α } [Neg α] : -a = -a := by rfl
 
 -- NegEq
 theorem term_derivation_neg_eq : true := by sorry
@@ -1376,7 +1376,7 @@ theorem term_derivation_addition_inverse : true := by sorry
 theorem term_derivation_addition_distributivity : true := by sorry
 
 -- NegLiteral
-macro "term_derivation_neg_literal" : term => `(by rfl)
+theorem term_derivation_neg_literal { α } { a : α } [Neg α] : -a = -a := by rfl
 
 -- NegEq
 theorem term_derivation_neg_eq : true := by sorry
@@ -1661,7 +1661,7 @@ theorem term_derivation_addition_inverse : true := by sorry
 theorem term_derivation_addition_distributivity : true := by sorry
 
 -- NegLiteral
-macro "term_derivation_neg_literal" : term => `(by rfl)
+theorem term_derivation_neg_literal { α } { a : α } [Neg α] : -a = -a := by rfl
 
 -- NegEq
 theorem term_derivation_neg_eq : true := by sorry
@@ -1958,7 +1958,7 @@ theorem term_derivation_addition_inverse : true := by sorry
 theorem term_derivation_addition_distributivity : true := by sorry
 
 -- NegLiteral
-macro "term_derivation_neg_literal" : term => `(by rfl)
+theorem term_derivation_neg_literal { α } { a : α } [Neg α] : -a = -a := by rfl
 
 -- NegEq
 theorem term_derivation_neg_eq : true := by sorry
@@ -2277,7 +2277,7 @@ theorem term_derivation_addition_inverse : true := by sorry
 theorem term_derivation_addition_distributivity : true := by sorry
 
 -- NegLiteral
-macro "term_derivation_neg_literal" : term => `(by rfl)
+theorem term_derivation_neg_literal { α } { a : α } [Neg α] : -a = -a := by rfl
 
 -- NegEq
 theorem term_derivation_neg_eq : true := by sorry
@@ -2659,7 +2659,7 @@ theorem term_derivation_addition_inverse : true := by sorry
 theorem term_derivation_addition_distributivity : true := by sorry
 
 -- NegLiteral
-macro "term_derivation_neg_literal" : term => `(by rfl)
+theorem term_derivation_neg_literal { α } { a : α } [Neg α] : -a = -a := by rfl
 
 -- NegEq
 theorem term_derivation_neg_eq : true := by sorry
